build: require cups >= 1.2

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=672182